--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "material-icons": "^1.13.14",
     "sass": "^1.92.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1"
