--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "material-icons": "^1.13.14",
     "sass": "^1.92.1",
     "vue": "^3.5.18",
-    "vue-router": "^4.5.1"
+    "vue-router": "^4.5.1",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^6.0.1",
