Adds censorsing to names in PenLights nicks & limits to 16 chars

--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bad-words": "^4.0.0",
+    "leo-profanity": "^1.8.0",
     "material-icons": "^1.13.14",
+    "profanity-cleaner": "^0.0.3",
     "sass": "^1.92.1",
     "vue": "^3.5.18",
     "vue-router": "^4.5.1",
